Actualization Alt & Carousel sponsor

--- a/index.html
+++ b/index.html
@@ -527,28 +527,28 @@
         <section class="patrocinadores">
             <h3 class="subtitulo">Han confiado en nosotros</h3>
             <aricle class="empresasPatrocinadorasUno">
-                <img src="img/company2.svg" alt="Foto compañia">
-                <img src="img/company4.svg" alt="Foto compañia">
-                <img src="img/company5.svg" alt="Foto compañia">
-                <img src="img/company9.svg" alt="Foto compañia">
-                <img src="img/company13.svg" alt="Foto compañia">
-                <img src="img/company16.svg" alt="Foto compañia">
-                <img src="img/company17.svg" alt="Foto compañia">
-                <img src="img/company18.svg" alt="Foto compañia">
-                <img src="img/company19.svg" alt="Foto compañia">
-                <img src="img/company20.svg" alt="Foto compañia">
+                <img src="img/company2.svg" alt="Compañia Medium">
+                <img src="img/company9.svg" alt="Compañia Basecamp">
+                <img src="img/company11.svg" alt="Compañia OOPPS">
+                <img src="img/company12.svg" alt="Compañia Framer">
+                <img src="img/company16.svg" alt="Compañia Boom">
+                <img src="img/company17.svg" alt="Compañia Galileo">
+                <img src="img/company18.svg" alt="Compañia Funding Circle">
+                <img src="img/company19.svg" alt="Compañia SignalFire">
+                <img src="img/company20.svg" alt="Compañia Glossier">
+                <img src="img/company21.svg" alt="Compañia Deserve">
             </aricle>
             <article class="empresasPatrocinadorasDos">
-                <img src="img/company1.svg" alt="Foto compañia">
-                <img src="img/company3.svg" alt="Foto compañia">
-                <img src="img/company6.svg" alt="Foto compañia">
-                <img src="img/company7.svg" alt="Foto compañia">
-                <img src="img/company8.svg" alt="Foto compañia">
-                <img src="img/company10.svg" alt="Foto compañia">
-                <img src="img/company11.svg" alt="Foto compañia">
-                <img src="img/company12.svg" alt="Foto compañia">
-                <img src="img/company14.svg" alt="Foto compañia">
-                <img src="img/company15.svg" alt="Foto compañia">
+                <img src="img/company1.svg" alt="Compañia Termocol">
+                <img src="img/company3.svg" alt="Compañia Beezer">
+                <img src="img/company4.svg" alt="Compañia Bombora">
+                <img src="img/company5.svg" alt="Compañia Bumble">
+                <img src="img/company6.svg" alt="Compañia Corning">
+                <img src="img/company15.svg" alt="Compañia H&H">
+                <img src="img/company8.svg" alt="Compañia Deepgram">
+                <img src="img/company10.svg" alt="Compañia Amazon">
+                <img src="img/company13.svg" alt="Compañia Vise">
+                <img src="img/company14.svg" alt="Compañia Atos">
             </article>
         </section>
 
