Actuzalizion correccion Preentrega3 - Imports

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <!-- Social Media -->
 
-        <section class="socialMediaUno">
+        <section class="socialMediaUno" id="socialMediaUno">
             <a class="mt-1" href="https://es-la.facebook.com/" target="_blank" >
                 <img src="img/facebook.svg" alt="Logo facebook" class="iconLink">
             </a>
@@ -117,7 +117,7 @@
 
         <!-- ArrowUp -->
 
-        <section class="arrowUp">
+        <section class="arrowUp" id="arrowUp">
             <a class="arrow" href="#">
                 <img src="img/arrowup.svg" alt="Flecha arriba">
             </a>
@@ -606,7 +606,7 @@
 
         <!-- Preguntas Frecuentes -->
 
-        <section class="row accordion mx-5 px-5">
+        <section class="row accordion">
             <h3 class="col subtitle">Preguntas frecuentes</h3>
             <div class="scrollDownAnswers">
                 <details class="row">
