--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@
                             <img src="img/user1.svg" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Sofia C.</p>
-                                <p>Dis.  UX/UI</p>
-                                <p>Bogota, Colombia</p>
+                                <p>Dis. UX/UI</p>
+                                <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -460,9 +460,9 @@
                         <article class="opinionBottom">
                             <img src="img/user2.svg" alt="Usuario" class="user">
                             <div class="data">
-                                <p>Erick B.</p>
+                                <p>Erika B.</p>
                                 <p>Des. Fullstack</p>
-                                <p>Lima, Peru</p>
+                                <p>Lima, Per</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
@@ -499,7 +499,7 @@
                             <div class="data">
                                 <p>Samanta N.</p>
                                 <p>Dis. UX/UI</p>
-                                <p>Medellín, Colombia</p>
+                                <p>Medellín, Col</p>
                             </div>
                             <div class="socialMedia">
                                 <a href="https://es-la.facebook.com/" target="_blank" >
