Actualizacion Inputs & Error404

--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                     <label for="email" class="inscribir">Inscribete a nuestra Newsletter</label>
                     <div class="accion">
                         <input id="email" placeholder="Email" type="email">
-                        <input class="btnAccion" type="submit">
+                        <a href="views/error404.html" class="btnAccion">Enviar</a>
                     </div>
                 </article>
             </section>
