--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="views/errow404.html" target="_blank">
+                                <a href="views/error404.html">
                                     <img src="img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -475,7 +475,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="views/error404.html" target="_blank">
+                                <a href="views/error404.html">
                                     <img src="img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -512,7 +512,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="views/error404.html" target="_blank">
+                                <a href="views/error404.html">
                                     <img src="img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
