--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="bannerMatch">
                 <article class="sideCompany">
                     <div class="cardCompany">
-                        <img src="img/company14.svg" alt="Compañia" class="picCompany">
+                        <img src="img/company14.svg" alt="Compañia Patrocinadora" class="picCompany">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -190,7 +190,7 @@
                         </div>
                     </div>
                     <div class="cardCompany">
-                        <img src="img/company10.svg" alt="Compañia" class="picCompany">
+                        <img src="img/company10.svg" alt="Compañia Patrocinadora" class="picCompany">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                     <div class="cardCompany">
-                        <img src="img/company2.svg" alt="Compañia" class="picCompany">
+                        <img src="img/company2.svg" alt="Compañia Patrocinadora" class="picCompany">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -214,7 +214,7 @@
                         </div>
                     </div>
                     <div class="cardCompany">
-                        <img src="img/company3.svg" alt="Compañia" class="picCompany">
+                        <img src="img/company3.svg" alt="Compañia Patrocinadora" class="picCompany">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                     <div class="cardCompany">
-                        <img src="img/company4.svg" alt="Compañia" class="picCompany">
+                        <img src="img/company4.svg" alt="Compañia Patrocinadora" class="picCompany">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -238,7 +238,7 @@
                         </div>
                     </div>
                     <div class="cardCompany">
-                        <img src="img/company5.svg" alt="Compañia" class="picCompany">
+                        <img src="img/company5.svg" alt="Compañia Patrocinadora" class="picCompany">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -250,7 +250,7 @@
                         </div>
                     </div>
                     <div class="cardCompany">
-                        <img src="img/company6.svg" alt="Compañia" class="picCompany">
+                        <img src="img/company6.svg" alt="Compañia Patrocinadora" class="picCompany">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -262,7 +262,7 @@
                         </div>
                     </div>
                     <div class="cardCompany">
-                        <img src="img/company13.svg" alt="Compañia" class="picCompany">
+                        <img src="img/company13.svg" alt="Compañia Patrocinadora" class="picCompany">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -297,7 +297,7 @@
                 </article>
                 <article class="sideStaff" id="sideStaff">
                     <div class="cardStaff">
-                        <img src="img/user12.svg" alt="Personal" class="picStaff">
+                        <img src="img/user12.svg" alt="Personal contratado" class="picStaff">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -309,7 +309,7 @@
                         </div>
                     </div>
                     <div class="cardStaff">
-                        <img src="img/user10.svg" alt="Personal" class="picStaff">
+                        <img src="img/user10.svg" alt="Personal contratado" class="picStaff">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -321,7 +321,7 @@
                         </div>
                     </div>
                     <div class="cardStaff">
-                        <img src="img/user1.svg" alt="Personal" class="picStaff">
+                        <img src="img/user1.svg" alt="Personal contratado" class="picStaff">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -333,7 +333,7 @@
                         </div>
                     </div>
                     <div class="cardStaff">
-                        <img src="img/user2.svg" alt="Personal" class="picStaff">
+                        <img src="img/user2.svg" alt="Personal contratado" class="picStaff">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -345,7 +345,7 @@
                         </div>
                     </div>
                     <div class="cardStaff">
-                        <img src="img/user3.svg" alt="Personal" class="picStaff">
+                        <img src="img/user3.svg" alt="Personal contratado" class="picStaff">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                     <div class="cardStaff">
-                        <img src="img/user4.svg" alt="Personal" class="picStaff">
+                        <img src="img/user4.svg" alt="Personal contratado" class="picStaff">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -369,7 +369,7 @@
                         </div>
                     </div>
                     <div class="cardStaff">
-                        <img src="img/user5.svg" alt="Personal" class="picStaff">
+                        <img src="img/user5.svg" alt="Personal contratado" class="picStaff">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -381,7 +381,7 @@
                         </div>
                     </div>
                     <div class="cardStaff">
-                        <img src="img/user6.svg" alt="Personal" class="picStaff">
+                        <img src="img/user6.svg" alt="Personal contratado" class="picStaff">
                         <div class="lines">
                             <div class="line"></div>
                             <div class="line"></div>
@@ -417,7 +417,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="img/user1.svg" alt="Usuario" class="user">
+                            <img src="img/user1.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Sofia C.</p>
                                 <p>Dis. UX/UI</p>
@@ -459,7 +459,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="img/user2.svg" alt="Usuario" class="user">
+                            <img src="img/user2.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Erika B.</p>
                                 <p>Des. Fullstack</p>
@@ -496,7 +496,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="img/user3.svg" alt="Usuario" class="user">
+                            <img src="img/user3.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Samanta N.</p>
                                 <p>Dis. UX/UI</p>
